src/objects/End_User_Project__c.object
<CustomObject>
    <description>Only the Project Owner and Account Manager should be able to change the status of the project (Not the opportunity owner)</description>
    <fields>
        <fullName>Account_End_User_Country__c</fullName>
        <description>- Account - End User Country (from account information)</description>
        <formula>Account_End_User__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>- Account - End User (should be selected from account)</description>
        <label>Account - End User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>&quot;ABB ICV&quot;, &quot;External non-buying Account&quot;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Projects</relationshipLabel>
        <relationshipName>End_User_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_LSO_Reference_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - 2101 requirement for LSO data in End User Proejct</description>
        <label>Account LSO Reference Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>ERP_Reference_Data__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Reference_Data__c</referenceTo>
        <relationshipLabel>End User Projects</relationshipLabel>
        <relationshipName>End_User_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Account manager (to be copied from account)</description>
        <formula>Account_End_User__r.Primary_Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Projects (Account)</relationshipLabel>
        <relationshipName>End_User_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capture Team Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator__c</fullName>
        <formula>IF( AND(Capture_Team_Status__c = &quot;No CT Required&quot;, Capture_Team_Count__c &gt;= 0), IMAGE(&quot;/resource/CaptureTeamNotRequired&quot;,&quot;&quot;,25,75), IF(AND(Capture_Team_Status__c = &quot;CT Lite Available&quot;,Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam5MCreated&quot;,&quot;&quot;,25,75),IF(AND(Capture_Team_Status__c = &quot;CT Lite Required&quot;,Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam5MOpen&quot;,&quot;&quot;,25,75),IF(AND(Capture_Team_Status__c = &quot;CT Full Available&quot;,Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam15MCreated&quot;,&quot;&quot;,25,75),IF(AND(Capture_Team_Status__c = &quot;CT Full Required&quot;,Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam15MOpen&quot;,&quot;&quot;,25,75),NULL))) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Team Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Status__c</fullName>
        <defaultValue>&quot;No CT Required&quot;</defaultValue>
        <label>Capture Team Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Migration_ID__c</fullName>
        <description>R3 - Migration Check Field.</description>
        <externalId>true</externalId>
        <label>End User Project Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_User_Project_Site_Country__c</fullName>
        <label>End User Project Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Status__c</fullName>
        <description>End User Project Status</description>
        <label>End User Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Sales_Collaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to initiate an approval process.</description>
        <label>International Sales Collaboration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_ID__c</fullName>
        <description>Created as part of R5-2279</description>
        <externalId>true</externalId>
        <label>Legacy Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>R4 - End user project Owner Name</description>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>Created as part of R5-2273</description>
        <displayFormat>PRO-{YY}-{0}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Investment__c</fullName>
        <description>New field as part of R5-2274</description>
        <inlineHelpText>Estimated Project CAPEX including all the opportunities for the ABB Offering as well as other products and services not in the ABB Portfolio.</inlineHelpText>
        <label>Total Investment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sfdc_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a technical field, used to differentiate between records created in salesforce from those created via the API. 
Technical (hidden) field. Activated  from the New End User Project button functionality.</description>
        <inlineHelpText>This is a technical field, used to differentiate between records created in salesforce from those created via the API. 
Technical (hidden) field. Activated  from the &quot;New End User Project&quot; button functionality.</inlineHelpText>
        <label>sfdc_created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <displayFormat>V-{0}</displayFormat>
        <label>test</label>
        <type>AutoNumber</type>
    </fields>
    <label>End User Project</label>
    <nameField>
        <label>End User Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>End User Projects</pluralLabel>
    <recordTypes>
        <fullName>Closed_Only</fullName>
        <active>true</active>
        <description>Record Type for Closed / Cancelled End User Projects</description>
        <label>Closed Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Prevent_changes_to_Project_Status</fullName>
        <active>true</active>
        <description>Only the Owner or Account Manager can change the Project Status.</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
 ISCHANGED(End_User_Project_Status__c),
 AND(
   $User.Id&lt;&gt; OwnerId,
  Account_Manager__c &lt;&gt; $User.Email
 )
)</errorConditionFormula>
        <errorDisplayField>End_User_Project_Status__c</errorDisplayField>
        <errorMessage>Only the record Owner or Account Manager can change this field.</errorMessage>
    </validationRules>
</CustomObject>